// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider snapshot > Divider demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical bui-divider-vertical-dashed"
    style={
      {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={{}}
  />
  下边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      {
        "height": "12px",
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={
      {
        "width": "100px",
      }
    }
  />
  下边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal bui-divider-content"
    style={
      {
        "margin": "6px 0",
      }
    }
  >
    <span
      className="bui-divider-line"
      style={
        {
          "width": "60px",
        }
      }
    />
    <span
      className="bui-divider-text"
    >
      我是分割线
    </span>
    <span
      className="bui-divider-line"
      style={
        {
          "width": "60px",
        }
      }
    />
  </div>
  下边
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 8`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={
      {
        "borderBottomWidth": "2px",
      }
    }
  />
  下边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      Object {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical bui-divider-vertical-dashed"
    style={
      Object {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      Object {
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={Object {}}
  />
  下边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
      "height": "40px",
    }
  }
>
  左边
  <div
    className="bui-divider bui-divider-vertical"
    style={
      Object {
        "height": "12px",
        "margin": "0 6px",
      }
    }
  />
  右边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={
      Object {
        "width": "100px",
      }
    }
  />
  下边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal bui-divider-content"
    style={
      Object {
        "margin": "6px 0",
      }
    }
  >
    <span
      className="bui-divider-line"
      style={
        Object {
          "width": "60px",
        }
      }
    />
    <span
      className="bui-divider-text"
    >
      我是分割线
    </span>
    <span
      className="bui-divider-line"
      style={
        Object {
          "width": "60px",
        }
      }
    />
  </div>
  下边
</div>
`;

exports[`Divider snapshot Divider demo snapshot 0 8`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
      "fontSize": "16px",
    }
  }
>
  上边
  <div
    className="bui-divider bui-divider-horizontal"
    style={
      Object {
        "borderBottomWidth": "2px",
      }
    }
  />
  下边
</div>
`;
